# libtufnano

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  libtufnano.c  libtufnano.h  libtufnano_internal.h  main.c  tufFilePaths.cmake  tuf_sample_client.c  tufnanoclient.c
.github/workflows/: cmake.yml
ext/fiat/src/: curve25519.c  curve25519.h
src/: libtufnano.c
src/include/: libtufnano.h  libtufnano_internal.h
test/: CMakeLists.txt
test/provisioning/ed25519/: root.json
test/sample_jsons/ed25519/: 10.root.json  11.root.json  12.root.json  13.root.json  2.root.json  3.root.json  4.root.json  5.root.json  6.root.json  7.root.json  8.root.json  9.root.json  current_epoch  snapshot.json  targets.json  timestamp.json
test/sample_jsons/error_hash_snapshot/: 2.root.json
test/sample_jsons/error_sig_root_2/: 2.root.json  timestamp.json
test/sample_jsons/error_sig_root_2_self/: 2.root.json
test/sample_jsons/error_sig_snapshot/: timestamp.json
test/sample_jsons/error_sig_timestamp/: snapshot.json
test/sample_jsons/error_version_root_2/: targets.json
test/sample_jsons/rsa/: snapshot.json.sig_key  targets.json.sha256  timestamp.json.sha256  timestamp.json.sig_key
test/unit-test/: libtufnano_client.cmake  libtufnano_utest.c
tests/: CMakeLists.txt
tests/sample_jsons/error_hash_snapshot/: 1.root.json  snapshot.json
tests/sample_jsons/error_hash_targets/: targets.json
tests/sample_jsons/error_sig_targets/: snapshot.json  timestamp.json
tests/sample_jsons/error_sig_timestamp/: timestamp.json
tests/sample_jsons/rsa/: 1.root.json.sig_key  snapshot.json.sha256  targets.json.sig_key
tests/unit-test/: CMakeLists.txt  libtufnano_utest.c  mbedtls_build.cmake
tuf_sample_client/: libtufnano_config.h  tufSampleClientFilePaths.cmake  tuf_client_application_context.h  tuf_client_platform.c  tuf_sample_client.c
